<?xml version="1.0" encoding="utf-8"?> 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
				 android:orientation="vertical" 
				 android:layout_width="fill_parent" 
				 android:layout_height="wrap_content" 
					android:layout_gravity="center_horizontal|center_vertical"
				 >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
				 android:orientation="vertical" 
				 android:layout_width="fill_parent" 
				 android:layout_height="wrap_content"  
				 android:gravity="center_horizontal"
				 android:layout_marginLeft="20dip" 
				 android:layout_marginRight="20dip">
  <TextView android:layout_width="wrap_content" 
				  android:layout_height="wrap_content" 
				  android:layout_marginTop="17dip" 
				  android:textColor="#ffffff" 
				  android:text="@string/Update_Title" 
				  android:textStyle="bold" 
				  android:textSize="16dip"
				  android:id="@+id/dialog_title"/> 
  <TextView android:layout_width="wrap_content" 
				  android:layout_height="wrap_content" 
				  android:layout_margin="10dip" 
				  android:gravity="center_horizontal"
				  android:textSize="16dip"
				  android:textColor="#ffffff" 
				  android:text="@string/Update_Content_tip" 
				  android:id="@+id/dialog_message"/> 
	 <com.funoble.myarstation.view.MyProgressBar android:id="@+id/pbPercent"
				            android:layout_width="fill_parent" android:layout_height="wrap_content" 
				            android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
				            android:progressDrawable="@drawable/color_progressbar3" style="?android:attr/progressBarStyleHorizontal" />
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
				  android:orientation="horizontal" 
				  android:layout_width="fill_parent" 
				  android:layout_height="wrap_content" 
				 android:layout_marginTop="10dip" 
				android:layout_marginBottom="10dip"
				android:gravity="center_horizontal"
				  >
  <Button android:layout_height="40dip" 
			  android:layout_width="wrap_content" 
			  android:text="@string/Update_Ok"
			  android:textStyle="bold"
			  android:textColor="@color/Black"
			  android:layout_weight="1"
			  android:id="@+id/ok" /> 
  <Button android:layout_height="40dip" 
			  android:layout_width="wrap_content" 
			  android:text="@string/Update_Web"
			  android:textStyle="bold"
			  android:layout_weight="1"
			  android:textColor="@color/Black"
			  android:id="@+id/btnUserWeb" /> 
  <Button android:layout_height="40dip" 
	  	  android:layout_width="wrap_content" 
		  android:layout_gravity="left" 
		  android:textColor = "@color/Black"
			  android:layout_weight="1"
		  android:text="@string/Update_Cancel"
		  android:textStyle="bold"
		  android:id="@+id/cancel" /> 
  </LinearLayout>
  </LinearLayout>
  </LinearLayout>